--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryLight">#ffc947</color>
+    <color name="colorGrayBackground">#F2F2F2</color>
+    <color name="colorSecondaryText">#757575</color>
 </resources>
