--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorGrayBackground"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/material_card_edge_margin"
@@ -26,7 +26,7 @@
             android:textSize="@dimen/material_card_supporting_text_text_size"
             tools:text="Ingredients list:\nItem1\nItem2"/>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipe_details_steps"
