--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -5,7 +5,7 @@
     android:layout_margin="@dimen/cards_gutter_half"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipe_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
