--- a/app/src/main/res/layout/fragment_recipe_step_single.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_single.xml
@@ -9,7 +9,7 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="81dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/recipe_step_desc_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/recipe_step_video"
