--- a/app/src/main/res/xml/widget_ingredients.xml
+++ b/app/src/main/res/xml/widget_ingredients.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="com.bohan.android.bakingapp.widget.WidgetConfigActivity"
+    android:configure="com.bohan.android.bakingapp.MVP.widget.WidgetConfigActivity"
     android:initialKeyguardLayout="@layout/widget_ingredients_list"
     android:initialLayout="@layout/widget_ingredients_list"
     android:minHeight="@dimen/widget_default_height"
