--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -19,11 +19,14 @@
             android:id="@+id/recipe_details_ingredients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo_bhaina"
+            android:textColor="@color/colorPrimaryDark"
             android:paddingTop="@dimen/material_card_title_block_large_padding_top"
             android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom"
             android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
             android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
-            android:textSize="@dimen/material_card_supporting_text_text_size"
+            android:textSize="@dimen/material_menu_simple_item_text_size"
+            android:gravity="center"
             tools:text="Ingredients list:\nItem1\nItem2"/>
 
     </androidx.cardview.widget.CardView>
@@ -32,6 +35,7 @@
         android:id="@+id/recipe_details_steps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_margin="@dimen/material_card_edge_margin"/>
 
 </LinearLayout>
