--- a/app/src/main/res/layout/fragment_recipe_step_single.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_single.xml
@@ -42,11 +42,14 @@
                 android:id="@+id/recipe_step_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/baloo_bhaina"
+                android:textColor="@color/colorPrimaryDark"
+                android:ellipsize="marquee"
                 android:paddingTop="@dimen/material_card_title_block_large_padding_top"
                 android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom"
                 android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
                 android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
-                android:textSize="@dimen/material_card_supporting_text_text_size"
+                android:textSize="@dimen/material_subheader_text_size"
                 tools:text="Step description"/>
 
         </LinearLayout>
