--- a/app/src/main/res/layout/widget_ingredients_list_item.xml
+++ b/app/src/main/res/layout/widget_ingredients_list_item.xml
@@ -8,7 +8,8 @@
         android:id="@+id/widget_ingredient_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
+        android:fontFamily="@font/baloo_bhaina"
         tools:text="Ingredient name"/>
 
 </FrameLayout>
