--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorPrimaryLight">#ffc947</color>
+    <color name="colorPrimary">#09beab</color>
+    <color name="colorPrimaryDark">#020202</color>
+    <color name="colorPrimaryLight">#95ea26</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorGrayBackground">#F2F2F2</color>
     <color name="colorSecondaryText">#757575</color>
